# Manor

./: .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  FUNDING.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
apps/desktop/scripts/: audit-legacy-tokens.sh
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/asset/: commands.rs  importer.rs  mod.rs
crates/app/src/assistant/: commands.rs  context.rs  mod.rs  ollama.rs  prompts.rs  today.rs  tools.rs
crates/app/src/embedding/: commands.rs  job.rs  mod.rs
crates/app/src/foundation/: commands.rs  mod.rs
crates/app/src/ledger/: ai_review.rs  bank_commands.rs  bank_keychain.rs  bank_sync.rs  commands.rs  csv_import.rs  gocardless.rs  mod.rs  oauth_server.rs
crates/app/src/maintenance/: commands.rs  event_commands.rs  mod.rs
crates/app/src/meal_plan/: commands.rs  ideas_commands.rs  mod.rs
crates/app/src/pdf_extract/: claude_client.rs  commands.rs  mod.rs  ollama_client.rs  pipeline.rs
crates/app/src/recipe/: commands.rs  importer.rs  llm_adapter.rs  mod.rs  stage_sweep.rs
crates/app/src/remote/: claude.rs  commands.rs  keychain.rs  mod.rs  orchestrator.rs  provider.rs
crates/app/src/repair/: commands.rs  fetch.rs  mod.rs  pipeline.rs  search.rs  synth.rs
crates/app/src/rhythm/: commands.rs  mod.rs
crates/app/src/safety/: launchd.rs  mod.rs  panic_commands.rs  snapshot_commands.rs  trash_commands.rs
crates/app/src/shopping_list/: commands.rs  mod.rs
crates/app/src/sync/: caldav.rs  engine.rs  expand.rs  ical.rs  ical_write.rs  keychain.rs  mod.rs
crates/app/src/weather/: commands.rs  mod.rs
crates/app/tests/: bank_sync_integration.rs  recipe_import_test.rs
crates/core/: Cargo.toml
crates/core/migrations/: V10__embeddings.sql  V11__remote_call_log.sql  V12__ledger_completions.sql  V13__bank_sync.sql  V14__recipe.sql  V15__recipe_hero_attachment.sql  V16__meal_plan.sql  V17__shopping_list.sql  V18__asset.sql  V19__maintenance_schedule.sql  V1__initial.sql  V20__maintenance_event.sql  V21__repair_note.sql  V22__message_created_at_seconds.sql  V23__drop_bank_sync.sql  V24__add_apply_errors_json.sql  V2__task.sql  V3__calendar.sql  V4__rhythm.sql  V5__ledger.sql  V6__calendar_write.sql  V8__foundation_tables.sql  V9__attachment_uuid_non_unique.sql
crates/core/src/: attachment.rs  embedding.rs  household.rs  lib.rs  note.rs  person.rs  redact.rs  remote_call_log.rs  setting.rs  snapshot.rs  tag.rs  trash.rs
crates/core/src/asset/: dal.rs  mod.rs
crates/core/src/assistant/: calendar.rs  calendar_account.rs  chore.rs  conversation.rs  db.rs  event.rs  message.rs  mod.rs  proposal.rs  proposal_error.rs  proposal_registry.rs  task.rs  time_block.rs  tolerant.rs
crates/core/src/assistant/proposal/: mod.rs
crates/core/src/assistant/proposal/approvers/: add_chore.rs  add_contract.rs  add_ledger_transaction.rs  add_maintenance_schedule.rs  add_recipe_quick.rs  add_recurring_block.rs  add_recurring_payment.rs  add_task.rs  add_time_block.rs  add_to_shopping_list.rs  complete_chore.rs  complete_task.rs  mod.rs  plan_meal.rs  set_budget.rs
crates/core/src/ledger/: bank_account.rs  budget.rs  category.rs  contract.rs  institution_cache.rs  mod.rs  recurring.rs  transaction.rs
crates/core/src/maintenance/: dal.rs  due.rs  event.rs  event_dal.rs  mod.rs
crates/core/src/meal_plan/: dal.rs  ideas.rs  matcher.rs  mod.rs  staples.rs
crates/core/src/net/: fetch.rs  mod.rs  ssrf.rs
crates/core/src/pdf_extract/: llm.rs  mod.rs  text.rs
crates/core/src/recipe/: dal.rs  import.rs  mod.rs
crates/core/src/repair/: dal.rs  mod.rs
crates/core/src/shopping_list/: dal.rs  generator.rs  mod.rs
crates/core/tests/fixtures/recipe/: allrecipes.html  bbc_good_food.html  bon_appetit.html  delicious.html  jamie_oliver.html  nyt_cooking.html  ottolenghi.html  serious_eats.html
docs/: INSTALL.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-04-14-phase-2-assistant-shell.md  2026-04-14-v0.1-heartbeat-phase-1-foundation.md  2026-04-15-phase-3a-today-tasks-implementation.md  2026-04-15-phase-3b-caldav-read-implementation.md  2026-04-15-phase-3c-today-context-implementation.md  2026-04-16-phase-4-rhythm-implementation.md  2026-04-16-phase-5a-ledger-core.md  2026-04-16-phase-5b-caldav-write.md  2026-04-16-phase-5c-ledger-completions.md  2026-04-16-v0.1-completion-phase-a-foundation.md  2026-04-16-v0.1-completion-phase-b-deletion-safety.md  2026-04-16-v0.1-completion-phase-e-settings-tabs.md  2026-04-17-phase-5d-bank-sync-implementation.md  2026-04-17-phase-6-flat-design-system-implementation.md  2026-04-17-remote-llm.md  2026-04-17-v0.1-completion-phase-c-embeddings.md  2026-04-17-v0.1-completion-phase-d-today-polish.md  2026-04-18-l3a-recipe-library-implementation.md  2026-04-18-l3b-meal-plan-implementation.md  2026-04-18-l3c-shopping-list-implementation.md  2026-04-18-l3d-meal-ideas-implementation.md  2026-04-18-l4a-asset-registry-implementation.md  2026-04-19-l4b-maintenance-schedules-implementation.md  2026-04-20-avatar-chat-simplify-implementation.md  2026-04-20-bundle-b-hardening.md  2026-04-20-l4c-maintenance-events-ledger-implementation.md  2026-04-20-l4d-right-to-repair-implementation.md  2026-04-20-l4e-pdf-manual-extraction-implementation.md
docs/superpowers/specs/: 2026-04-14-life-assistant-design.md  2026-04-14-phase-2-assistant-design.md  2026-04-15-phase-3a-today-tasks-design.md  2026-04-15-phase-3b-caldav-read-design.md  2026-04-15-phase-3c-today-context.md  2026-04-16-gap-closure-roadmap.md  2026-04-16-phase-4-rhythm-design.md  2026-04-16-phase-5-ledger-design.md  2026-04-16-phase-5b-caldav-write-design.md  2026-04-16-v0.1-completion-design.md  (+16 more)
scripts/: bootstrap.sh  dev.sh  install-ollama.sh  release-mac.sh
(+188 files in other folders)
