[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Life Assistant Contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/hanamori/life-assistant"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

life-core = { path = "crates/core" }
life-app = { path = "crates/app" }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
