[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/app",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Manor Contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/hanamorix/Manor"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

manor-core = { path = "crates/core" }
manor-app = { path = "crates/app" }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
