[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/app",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Manor Contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/hanamorix/Manor"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = { version = "0.9", default-features = false, features = ["std"] }
ical = "0.11"
rrule = "0.13"
keyring = "3"
quick-xml = "0.36"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
age = "0.10"
tar = "0.4"
flate2 = "1"

# dev-dependencies
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"

manor-core = { path = "crates/core" }
manor-app = { path = "crates/app" }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
