[package]
name = "life-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri command glue for Life Assistant; keeps tauri-specific code out of core"

[dependencies]
serde.workspace = true
tauri = "2"
life-core.workspace = true
