[package]
name = "manor-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri command glue for Manor; keeps tauri-specific code out of core"

[dependencies]
serde.workspace = true
tauri = "2"
manor-core.workspace = true
