[package]
name = "manor-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri command glue for Manor; keeps tauri-specific code out of core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = "2"
manor-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
async-trait.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
ical.workspace = true
rrule.workspace = true
keyring.workspace = true
quick-xml.workspace = true
base64.workspace = true
plist.workspace = true
csv.workspace = true
tiny_http.workspace = true
urlencoding.workspace = true
url.workspace = true
uuid.workspace = true
scraper = "0.20"
rand = "0.8"
dirs = "5"

[dev-dependencies]
wiremock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
