[package]
name = "manor-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Manor core library"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
refinery.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rrule.workspace = true
uuid.workspace = true
sha2.workspace = true
regex.workspace = true
age.workspace = true
tar.workspace = true
flate2.workspace = true
bytemuck.workspace = true
url.workspace = true
scraper = "0.20"
async-trait = "0.1"
pdf-extract = "0.7"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
