[package]
name = "manor-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Manor desktop shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
manor-app.workspace = true
anyhow.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
